--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-nextjs-logger",
   "version": "1.0.0",
   "description": "A logging library for React and Next.js applications",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
