--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "prepare": "npm run build"
   },
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0",
-    "next": "^12.0.0 || ^13.0.0 || ^14.0.0"
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "next": "^12.0.0 || ^13.0.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
